新增產業資訊表格
